--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <title>포르쉐코리아 - PorscheAG</title>
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <body>
+    <div class="blur"></div>
     <div id="wrap">
         <header>
             <div class="inner header_inner">
-                <h1 class="logo"><img src="imges/logo.png" alt="포르쉐코리아"></h1>
+                <h1 class="logo"><img src="imges/logo_w.png" alt="logo"></h1>
                 <div class="info">
                     <div class="login">
                         <ul>
@@ -47,14 +51,14 @@
             <nav>
                 <ul class="gnb">
                     <li class="1dp">
-                        <a href="javaascript:void(0);">718</a>
+                        <a href="javascript:void(0);">718</a>
                         <div class="Depth2">
                             <div class="Depth_inner">
                                 <ul>
                                     <li><span class="tit">718살펴보기</span></li>
                                     <li><a href="#">718 Carman</a></li>
                                     <li><a href="#">718 Boxster</a></li>
-                                    <li><a href="#">718 Carman gt4</a></li>
+                                    <li><a href="#">718 Carman Gt4</a></li>
                                 </ul>
                                 <ul>
                                     <li><span class="tit">구매관련</span></li>
@@ -63,7 +67,7 @@
                                     <li><a href="#">포르쉐 파이낸셜 서비스</a></li>
                                 </ul>
                                 <ul>
-                                    <li><span class="tit">그 외 관련</span></li>
+                                    <li><span class="tit">그 외 관련</span></li>
                                     <li><a href="">비교하기</a></li>
                                     <li><a href="">모든 시리즈 및 모델 살펴보기</a></li>
                                 </ul>
@@ -71,14 +75,14 @@
                         </div>
                     </li>
                     <li class="1dp">
-                        <a href="javaascript:void(0);">911</a>
+                        <a href="javascript:void(0);">911</a>
                         <div class="Depth2">
                             <div class="Depth_inner">
                                 <ul>
                                     <li><span class="tit">911살펴보기</span></li>
-                                    <li><a href="#">carrera 모델</a></li>
-                                    <li><a href="#">carreracabriolet 모델</a></li>
-                                    <li><a href="#">911targe 모델</a></li>
+                                    <li><a href="#">Carrera 모델</a></li>
+                                    <li><a href="#">Carreracabriolet 모델</a></li>
+                                    <li><a href="#">911 targe 모델</a></li>
                                     <li><a href="#">911 turbo S 모델</a></li>
                                     <li><a href="#">911 GTS</a></li>
                                 </ul>
@@ -97,14 +101,13 @@
                         </div>
                     </li>
                     <li class="1dp">
-                        <a href="javaascript:void(0);">Taycan</a>
+                        <a href="javascript:void(0);">Taycan</a>
                         <div class="Depth2">
                             <div class="Depth_inner">
                                 <ul>
-                                    <li><span class="tit">718살펴보기</span></li>
-                                    <li><a href="">718 Carman</a></li>
-                                    <li><a href="">718 Boxster</a></li>
-                                    <li><a href="">718 Carman gt4</a></li>
+                                    <li><span class="tit">Taycan 살펴보기</span></li>
+                                    <li><a href="">Taycan 모델</a></li>
+                                    <li><a href="">CrossTurismo</a></li>
                                 </ul>
                                 <ul>
                                     <li><span class="tit">구매관련</span></li>
@@ -121,14 +124,58 @@
                         </div>
                     </li>
                     <li class="1dp">
-                        <a href="javaascript:void(0);">Panamera</a>
+                        <a href="javascript:void(0);">Panamera</a>
                         <div class="Depth2">
                             <div class="Depth_inner">
                                 <ul>
-                                    <li><span class="tit">718살펴보기</span></li>
-                                    <li><a href="">718 Carman</a></li>
-                                    <li><a href="">718 Boxster</a></li>
-                                    <li><a href="">718 Carman gt4</a></li>
+                                    <li><span class="tit">Panamera 살펴보기</span></li>
+                                    <li><a href="javascript:void(0);">Panamera 모델</a></li>
+                                    <li><a href="javascript:void(0);">Executive 모델</a></li>
+                                </ul>
+                                <ul>
+                                    <li><span class="tit">구매관련</span></li>
+                                    <li><a href="javascript:void(0);">나만의 포르쉐 만들기</a></li>
+                                    <li><a href="javascript:void(0);">포르쉐 신차 찾기 및 중고차 찾기</a></li>
+                                    <li><a href="javascript:void(0);">포르쉐 파이낸셜 서비스</a></li>
+                                </ul>
+                                <ul>
+                                    <li><span class="tit">그 외 관련</span></li>
+                                    <li><a href="javascript:void(0);">비교하기</a></li>
+                                    <li><a href="javascript:void(0);">모든 시리즈 및 모델 살펴보기</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="1dp">
+                        <a href="javascript:void(0);;">Macan</a>
+                        <div class="Depth2">
+                            <div class="Depth_inner">
+                                <ul>
+                                    <li><span class="tit">Macan 살펴보기</span></li>
+                                    <li><a href="javascript:void(0);">Macan 모델</a></li>
+                                </ul>
+                                <ul>
+                                    <li><span class="tit">구매관련</span></li>
+                                    <li><a href="javascript:void(0);">나만의 포르쉐 만들기</a></li>
+                                    <li><a href="javascript:void(0);">포르쉐 신차 찾기 및 중고차 찾기</a></li>
+                                    <li><a href="javascript:void(0);">포르쉐 파이낸셜 서비스</a></li>
+                                </ul>
+                                <ul>
+                                    <li><span class="tit">그 외 관련</span></li>
+                                    <li><a href="javascript:void(0);">비교하기</a></li>
+                                    <li><a href="">모든 시리즈 및 모델 살펴보기</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="1dp">
+                        <a href="javascript:void(0);">Cayenne</a>
+                        <div class="Depth2">
+                            <div class="Depth_inner">
+                                <ul>
+                                    <li><span class="tit">Cayenne 살펴보기</span></li>
+                                    <li><a href="javascript:void(0);">Cayenne 모델</a></li>
+                                    <li><a href="javascript:void(0);">Coupe 모델</a></li>
                                 </ul>
                                 <ul>
                                     <li><span class="tit">구매관련</span></li>
@@ -138,54 +185,6 @@
                                 </ul>
                                 <ul>
                                     <li><span class="tit">그 외 관련</span></li>
-                                    <li><a href="">비교하기</a></li>
-                                    <li><a href="">모든 시리즈 및 모델 살펴보기</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="1dp">
-                        <a href="javaascript:void(0);">Macan</a>
-                        <div class="Depth2">
-                            <div class="Depth_inner">
-                                <ul>
-                                    <li><span class="tit">718살펴보기</span></li>
-                                    <li><a href="javaascript:void(0);">718 Carman</a></li>
-                                    <li><a href="javaascript:void(0);">718 Boxster</a></li>
-                                    <li><a href="javaascript:void(0);">718 Carman gt4</a></li>
-                                </ul>
-                                <ul>
-                                    <li><span class="tit">구매관련</span></li>
-                                    <li><a href="javaascript:void(0);">나만의 포르쉐 만들기</a></li>
-                                    <li><a href="javaascript:void(0);">포르쉐 신차 찾기 및 중고차 찾기</a></li>
-                                    <li><a href="javaascript:void(0);">포르쉐 파이낸셜 서비스</a></li>
-                                </ul>
-                                <ul>
-                                    <li><span class="tit">그 외 관련</span></li>
-                                    <li><a href="javaascript:void(0);">비교하기</a></li>
-                                    <li><a href="">모든 시리즈 및 모델 살펴보기</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="1dp">
-                        <a href="javaascript:void(0);">Cayenne</a>
-                        <div class="Depth2">
-                            <div class="Depth_inner">
-                                <ul>
-                                    <li><span class="tit">718살펴보기</span></li>
-                                    <li><a href="javaascript:void(0);">718 Carman</a></li>
-                                    <li><a href="javaascript:void(0);">718 Boxster</a></li>
-                                    <li><a href="javaascript:void(0);">718 Carman gt4</a></li>
-                                </ul>
-                                <ul>
-                                    <li><span class="tit">구매관련</span></li>
-                                    <li><a href="">나만의 포르쉐 만들기</a></li>
-                                    <li><a href="">포르쉐 신차 찾기 및 중고차 찾기</a></li>
-                                    <li><a href="">포르쉐 파이낸셜 서비스</a></li>
-                                </ul>
-                                <ul>
-                                    <li><span class="tit">그 외 관련</span></li>
                                     <li><a href="#">비교하기</a></li>
                                     <li><a href="#">모든 시리즈 및 모델 살펴보기</a></li>
                                 </ul>
@@ -195,6 +194,54 @@
                 </ul>
             </nav>
         </header>
+        <div class="full_meun">
+            <div class="full_inner">
+                <div class="top">
+                    <button class="close material-icons">close</button>
+                </div>
+                <div class="full_list">
+                    <div class="list">
+                        <p class="list-tit">서비스</p>
+                        <ul>
+                            <li><a href="#">E-모빌리티 & E-퍼포먼스</a></li>
+                            <li><a href="#">포르쉐 파이낸셜 서비스 – 리스 & 금융 서비스</a></li>
+                            <li><a href="#">팩토리 컬렉션</a></li>
+                            <li><a href="#">서비스 & 메인터넌스</a></li>
+                            <li><a href="#">테큅먼트 – 순정 액세서리</a></li>
+                            <li><a href="#">Porsche Exclusive Manufaktur</a></li>
+                            <li><a href="#">포르쉐 클래식</a></li>
+                        </ul>
+                    </div>
+                    <div class="list">
+                        <p class="list-tit">익스피리언스</p>
+                        <ul>
+                            <li><a href="#">모터스포츠</a></li>
+                            <li><a href="#">포르쉐 익스피리언스 - 트레이닝 & 트래블</a></li>
+                            <li><a href="#">포르쉐 클럽</a></li>
+                            <li><a href="#">포르쉐 골프</a></li>
+                            <li><a href="#">포르쉐 소셜 미디어</a></li>
+                            <li><a href="#">포르쉐 매거진 - Christophorus</a></li>
+                            <li><a href="#">포르쉐 뉴스레터</a></li>
+                            <li><a href="#">포르쉐 박물관</a></li>
+                        </ul>
+                    </div>
+                    <div class="list">
+                        <p class="list-tit"> 포르쉐에 관하여</p>
+                        <ul>
+                            <li><a href="#">포르쉐 기업 정보</a></li>
+                            <li><a href="#">포르쉐 코리아 소개</a></li>
+                            <li><a href="#">지속 가능성</a></li>
+                            <li><a href="#">채용정보</a></li>
+                            <li><a href="#">포르쉐 딜러 지원</a></li>
+                            <li><a href="#">포르쉐 계열사</a></li>
+                            <li><a href="#">뉴스룸 및 보도자료</a></li>
+                            <li><a href="#">문의하기</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <span class="copyrigth">© 2023 Porsche Korea Ltd.</span>
+            </div>
+        </div>
         <main>
             <section class="main_video">
                 <div class="fllter"></div>
@@ -202,17 +249,17 @@
                     <source src="imges/main_video.mp4">
                 </video>
                 <div class="text_box">
-                    <div class="text_wrap">
+                    <div class="text_wrap" data-aos="fade-up" data-aos-duration="3000">
                         <div class="text_positon">
-                            <h1 class="vis_tit">Taucan</h1>
+                            <h1 class="vis_tit">Taycan</h1>
                             <div class="price">123,900,000 KRW 부터</div>
                             <div class="btn">
                                 <ul>
                                     <li>
-                                        <a href="">더 알아보기 <i>icon</i></a>
+                                        <a href="">더 알아보기 <i class="material-icons arrow">chevron_right</i></a>
                                     </li>
                                     <li>
-                                        <a href="">나만의 포르쉐만들기 <i>icon</i></a>
+                                        <a href="">나만의 포르쉐만들기 <i class="material-icons arrow">chevron_right</i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -224,6 +271,9 @@
         <footer></footer>
     </div>
     <script src="js/custom.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
