--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="login">
                         <ul>
                             <li>
-                                <a href="#"><span class="material-icons">
+                                <a href="view.html"><span class="material-icons">
                                         shopping_cart
                                     </span></a>
                             </li>
@@ -110,7 +110,7 @@
                                 <ul>
                                     <li><span class="tit">718살펴보기</span></li>
                                     <li><a href="#">718 Carman</a></li>
-                                    <li><a href="#">718 Boxster</a></li>
+                                    <li><a href="view.html">718 Boxster</a></li>
                                     <li><a href="#">718 Carman Gt4</a></li>
                                 </ul>
                                 <ul>
