--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <p class="list-tit">서비스</p>
                     <ul>
                         <li><a href="#">E-모빌리티 & E-퍼포먼스</a></li>
-                        <li><a href="#">포르쉐 파이낸셜 서비스 – 리스 & 금융 서비스</a></li>
+                        <li><a href="#">포르쉐 파이낸셜 서비스–리스 & 금융 서비스</a></li>
                         <li><a href="#">팩토리 컬렉션</a></li>
                         <li><a href="#">서비스 & 메인터넌스</a></li>
-                        <li><a href="#">테큅먼트 – 순정 액세서리</a></li>
+                        <li><a href="#">테큅먼트-순정 액세서리</a></li>
                         <li><a href="#">Porsche Exclusive Manufaktur</a></li>
                         <li><a href="#">포르쉐 클래식</a></li>
                     </ul>
@@ -82,7 +82,7 @@
                                     </span></a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="login.html">
                                     <span class="material-icons">
                                         account_circle
                                     </span>
