--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/Swiper_custom.css">
     <link rel="stylesheet" href="css/select.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
 
 
@@ -250,11 +249,13 @@
         <main>
             <section class="main_video">
                 <div class="fllter"></div>
-                <video muted autoplay loop>
-                    <source src="imges/main_video.mp4">
-                </video>
+                <div class="video_wrap">
+                    <video muted autoplay loop playsinline>
+                        <source src="imges/main_video.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="text_box">
-                    <div class="text_wrap" data-aos="fade-up" data-aos-duration="3000">
+                    <div class="text_wrap">
                         <div class="text_positon">
                             <h1 class="vis_tit">Taycan</h1>
                             <div class="price">123,900,000 KRW 부터</div>
@@ -656,9 +657,6 @@
         $(document).ready(function () {
             $('select').niceSelect();
         });
-    </script>
-    <script>
-        AOS.init();
     </script>
     <script>
 
